[dependencies]
clap = '2.33.0'
colored = '1.8.0'
notify = '4.0.12'
pad = '0.1.5'
serde = '1.0.92'
serde_derive = '1.0.92'
serde_json = '1.0.39'
terminal_size = '0.1.8'
toml = '0.5.1'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = [
    'command-line-utilities',
    'development-tools',
    'development-tools::debugging',
    'parsing',
]
description = 'A library that parses output from `cargo check`, and a cli tool that uses the library to print compact error messages.'
documentation = 'https://docs.rs/coral'
edition = '2018'
keywords = [
    'rls',
    'check',
    'build',
    'analyze',
    'compile',
]
license = 'MIT'
name = 'coral'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/coral'
version = '0.9.0'
